--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
                 vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
         </div>
     </div>
-    
+
 
     <div id="gameModes" class="section">
         <div class="text-container">
             <h1>Game modes</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor
                 vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
+            <a href="lixo/index.html">lixo</a>
         </div>
     </div>
     <script src="script.js"></script>
