--- a/Lixo/index.html
+++ b/Lixo/index.html
@@ -4,7 +4,7 @@
     <title>Random Name Generator</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="../spinningWheel/styles.css">
+    <link rel="stylesheet" type="text/css" href="../spinningWheel/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0"></script>
 </head>
