Adição de imagens

--- a/Lixo/index.html
+++ b/Lixo/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <img class="bg" src="/Lixo/Images/BG.png" alt="BlackAndGreyBackground">
     <h1>Spinning wheel</h1>
     
     <div id="myChart"></div>
