--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav class="visible">
-        <div class="logo"> <a href="home" class="top-link">Logo</a></div>
+        <div class="logo"> <img src="/HomePageImages/logo.png" alt=""></div>
         <ul>
             <li><a href="#about" class="scroll-link">About ()</a></li>
             <li><a href="#gameModes" class="scroll-link">Game Modes</a></li>
@@ -17,27 +17,8 @@
     </nav>
     <div id="home" class="section visible">
         <div id="slideshow">
-            <img src="/images/1.jpg" alt="Image 1">
-            <img src="/images/2.jpg" alt="Image 2">
-            <img src="/images/3.jpg" alt="Image 3">
-        </div>
-    </div>
-
-    <div id="about" class="section">
-        <div class="text-container">
-            <h1>About()</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor
-                vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
-        </div>
-    </div>
-
-
-    <div id="gameModes" class="section">
-        <div class="text-container">
-            <h1>Game modes</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor
-                vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
-            <a href="lixo/index.html">lixo</a>
+            <img src="HomePageImages/SliderImage1.png" class="SlideShowImage" alt="Garbage Image">
+            <img src="HomePageImages/SliderImage2.png" class="SlideShowImage" alt="Dog poo">
         </div>
     </div>
     <script src="script.js"></script>
