Responsive e adição pngs

--- a/Lixo/index.html
+++ b/Lixo/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Random Name Generator</title>
+    <title>Garbage</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="../spinningWheel/style.css">
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-    <img class="bg" src="/Lixo/Images/BG.png" alt="BlackAndGreyBackground">
     <h1>Spinning wheel</h1>
-    
+
     <div id="myChart"></div>
+
+    <span id="WinnerText">() foi o vencedor</span>
 
     <script src="/spinningWheel/script.js"></script>
 </body>
