--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>My Website</title>
+    <title>Who will do it?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -11,15 +11,27 @@
     <nav class="visible">
         <div class="logo"> <img src="/HomePageImages/logo.png" alt=""></div>
         <ul>
-            <li><a href="#about" class="scroll-link">About ()</a></li>
-            <li><a href="#gameModes" class="scroll-link">Game Modes</a></li>
+            <li><a href="">Game Modes</a></li>
+            <li><a href="">About ()</a></li>
         </ul>
     </nav>
-    <div id="home" class="section visible">
+    <div id="" class="section visible">
         <div id="slideshow">
-            <img src="HomePageImages/SliderImage1.png" class="SlideShowImage" alt="Garbage Image">
-            <img src="HomePageImages/SliderImage2.png" class="SlideShowImage" alt="Dog poo">
+            <a href="/Lixo/index.html" target="_blank">
+                <img src="HomePageImages/SliderImage1.png" alt="Garbage Image">
+            </a>
+            <a href="/dogPoop/index.html" target="_blank">
+                <img src="HomePageImages/SliderImage2.png" alt="Dog poo">
+            </a>
         </div>
+    </div>
+
+    <div class="GameModes">
+        <p>game modes</p>
+    </div>
+
+    <div class="About">
+        <p>About</p>
     </div>
     <script src="script.js"></script>
 </body>
