--- a/dogPoop/index.html
+++ b/dogPoop/index.html
@@ -1,8 +1,9 @@
 <html>
 
 <head>
-    <title>Random Name Generator</title>
+    <title>Dog Poo</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="../spinningWheel/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0"></script>
@@ -12,6 +13,8 @@
     <h1>Spinning wheel</h1>
     
     <div id="myChart"></div>
+
+    <span id="WinnerText">() foi o vencedor</span>
 
     <script src="../spinningWheel/script.js"></script>
 </body>
