--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Who will do it?</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link rel="icon" href="/HomePageImages/logo.png" type="image/icon type">
+    <link rel="icon" href="HomePageImages/logo.png" type="image/icon type">
 </head>
 
 <body>
     <nav class="visible">
-        <div class="logo"> <a href="#home" class="top-link"><img src="/HomePageImages/logo.png" alt="Logo"></a></div>
+        <div class="logo"> <a href="#home" class="top-link"><img src="HomePageImages/logo.png" alt="Logo"></a></div>
         <ul>
             <li><a href="#gameModes" class="scroll-link">Game Modes</a></li>
             <li><a href="#about" class="scroll-link">About</a></li>
@@ -19,10 +19,10 @@
     </nav>
     <div id="" class="section visible">
         <div id="slideshow">
-            <a href="/Lixo/index.html" target="_blank">
+            <a href="Lixo/index.html" target="_blank">
                 <img src="HomePageImages/SliderImage1.png" alt="Garbage Image">
             </a>
-            <a href="/dogPoop/index.html" target="_blank">
+            <a href="dogPoop/index.html" target="_blank">
                 <img src="HomePageImages/SliderImage2.png" alt="Dog poo">
             </a>
         </div>
@@ -31,11 +31,11 @@
 
     <div id="gameModes" class="section">
         <div>
-            <a href="/Lixo/index.html" target="_blank">
-                <img class="gamemodeButton" src="/HomePageImages/GarbageButton.png" alt="Garbage">
+            <a href="Lixo/index.html" target="_blank">
+                <img class="gamemodeButton" src="HomePageImages/GarbageButton.png" alt="Garbage">
             </a>
-            <a href="/dogPoop/index.html" target="_blank">
-                <img class="gamemodeButton" src="/HomePageImages/DogPoopButton.png" alt="poop">
+            <a href="dogPoop/index.html" target="_blank">
+                <img class="gamemodeButton" src="HomePageImages/DogPoopButton.png" alt="poop">
             </a>
         </div>
     </div>
