--- a/Lixo/index.html
+++ b/Lixo/index.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0"></script>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel="icon" href="/HomePageImages/logo.png" type="image/icon type">
+
 </head>
 
 <body>
