--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </nav>
     <div id="" class="section visible">
         <div id="slideshow">
-            <a href="/Lixo/index.html" target="_blank">
+            <a href="Lixo/index.html" target="_blank">
                 <img src="HomePageImages/SliderImage1.png" alt="Garbage Image">
             </a>
-            <a href="/dogPoop/index.html" target="_blank">
+            <a href="dogPoop/index.html" target="_blank">
                 <img src="HomePageImages/SliderImage2.png" alt="Dog poo">
             </a>
         </div>
