--- a/Lixo/index.html
+++ b/Lixo/index.html
@@ -19,7 +19,7 @@
 
     <span id="WinnerText">You've been chosen by fate to be the garbage hero of the day. Don't worry, we know you've got the strength and the courage to take on this smelly mission. Just think of it as a chance to save the world from the trash monsters. And if things get a little messy, just remember that's what gloves are for. So grab your bin and let's go out to battle. You got this!</span>
 
-    <script src="../spinningWheel/script.js"></script>
+    <!-- <script src="../spinningWheel/script.js"></script> -->
 </body>
 
 </html>
