--- a/dogPoop/index.html
+++ b/dogPoop/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Dog Poo</title>
-    <link rel="stylesheet" type="text/css" href="../dogPoop/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" type="text/css" href="../spinningWheel/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0"></script> -->
