--- a/dogPoop/index.html
+++ b/dogPoop/index.html
@@ -2,11 +2,12 @@
 
 <head>
     <title>Dog Poo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../dogPoop/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0"></script>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="icon" href="/HomePageImages/logo.png" type="image/icon type">
+    <link rel="stylesheet" type="text/css" href="../spinningWheel/style.css">
 </head>
 
 <body>
@@ -17,7 +18,6 @@
     <span id="WinnerText">You've been chosen by fate to be the dog poop janitor of the day. Don't worry, we believe in you. Just think of it as an opportunity to show off your skills in handling the mess and impress everyone. And if things don't go as planned, remember, every dog poops. So put on your gloves, grab your poop bags and let's get to work. Who knows, maybe you'll find a treasure (or at least some spare change) among the mess.</span>
     
     <script src="../spinningWheel/script.js"></script>
-    <link rel="stylesheet" type="text/css" href="../spinningWheel/style.css">
 </body>
 
 </html>
