--- a/spinningWheel/index.html
+++ b/spinningWheel/index.html
@@ -13,7 +13,7 @@
     <br>
 </div>
 
-<img id="arrow" src="/spinningWheel/images/arrow.png" alt="arrow">
+<img id="arrow" src="../spinningWheel/images/arrow.png" alt="arrow">
 
 <div id="Chart">
     <canvas id="myChartCanvas"></canvas>
